--- a/src/components/artwork.css
+++ b/src/components/artwork.css
@@ -1,3 +1,8 @@
 .artwork-page {
     height: 100vh;
 }
+
+.artwork-page h1 {
+    margin: 0;
+  padding:0;
+}
