--- a/src/components/code.css
+++ b/src/components/code.css
@@ -1,3 +1,10 @@
 .code-page {
     height: 100vh;
+    margin: 0;
+    padding:0;
+}
+
+.code-page h1 {
+    margin: 0;
+  padding:0;
 }
