--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,3 +1,9 @@
 .contact-page {
     height: 20vh;
 }
+
+
+.contact-page h1 {
+    margin: 0;
+  padding:0;
+}
