--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -26,7 +26,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: calc(.3em + 1.7vw);
     padding-top: 29px;
 }
 
@@ -39,7 +39,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: calc(.1em + 1.2vw);
 }
 
 
