--- a/src/components/work3D.css
+++ b/src/components/work3D.css
@@ -1,3 +1,8 @@
 .work3D-page {
     height: 100vh;
 }
+
+.work3D-page h1 {
+    margin: 0;
+  padding:0;
+}
